--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "vue": "^2.1.0",
-    "vue-material": "^0.6.3"
+    "vue-material": "^0.6.3",
+    "vue-router": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
