--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "acacha-forms": "^0.1.7",
     "animate.css": "^3.5.2",
     "axios": "^0.15.3",
+    "fastclick": "^1.0.6",
     "js-md5": "^0.4.2",
     "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.7.0",
